plugins {
    id 'java'
    id 'org.jreleaser' version '1.16.0'
    id 'java-gradle-plugin'
    id 'maven-publish'
    id 'idea'
    id 'eclipse'
    id 'groovy'
    alias(libs.plugins.kotlin)
    alias(libs.plugins.spotless)
    alias(libs.plugins.retry)
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
}

tasks.withType(KotlinCompile).configureEach {
    kotlinOptions {
        jvmTarget = "21"
    }
}

def ENV = System.getenv()
if (!ENV.MAVEN_USERNAME) {
    version = version + '.local'
}

// We must build against the version of Kotlin Gradle ships with.
def props = new Properties()
Project.class.getClassLoader().getResource("gradle-kotlin-dsl-versions.properties").openStream().withCloseable {
    props.load(it)
}
def kotlinVersion = props.getProperty("kotlin")
if (libs.versions.kotlin.get() != kotlinVersion) {
    throw new IllegalStateException("Requires Kotlin version: ${kotlinVersion}")
}

repositories {
    maven {
        name = 'Fabric'
        url = 'https://maven.fabricmc.net/'
    }
    mavenCentral()
}

configurations.configureEach {
    resolutionStrategy {
        failOnNonReproducibleResolution()
    }

    if (canBeConsumed) {
        attributes {
            attribute(GradlePluginApiVersion.GRADLE_PLUGIN_API_VERSION_ATTRIBUTE,
                objects.named(GradlePluginApiVersion, GradleVersion.current().getVersion()))
        }
    }
}

sourceSets {
    commonDecompiler {
        java {
            srcDir("src/decompilers/common")
        }
    }
    fernflower {
        java {
            srcDir("src/decompilers/fernflower")
        }
    }
    cfr {
        java {
            srcDir("src/decompilers/cfr")
        }
    }
    vineflower {
        java {
            srcDir("src/decompilers/vineflower")
        }
    }
}

dependencies {
    implementation gradleApi()

    // libraries
    implementation libs.commons.io
    implementation libs.gson
    implementation libs.guava
    implementation libs.bundles.asm

    // game handling utils
    implementation(libs.fabric.stitch) {
        exclude module: 'enigma'
    }

    // tinyfile management
    implementation libs.fabric.tiny.remapper
    implementation libs.fabric.access.widener
    implementation libs.fabric.mapping.io
    implementation(libs.fabric.lorenz.tiny) {
        transitive = false
    }

    implementation libs.fabric.loom.nativelib

    // decompilers
    fernflowerCompileOnly runtimeLibs.fernflower
    fernflowerCompileOnly libs.fabric.mapping.io

    cfrCompileOnly runtimeLibs.cfr
    cfrCompileOnly libs.fabric.mapping.io

    vineflowerCompileOnly runtimeLibs.vineflower
    vineflowerCompileOnly libs.fabric.mapping.io

    fernflowerApi sourceSets.commonDecompiler.output
    cfrApi sourceSets.commonDecompiler.output
    vineflowerApi sourceSets.commonDecompiler.output

    implementation sourceSets.commonDecompiler.output
    implementation sourceSets.fernflower.output
    implementation sourceSets.cfr.output
    implementation sourceSets.vineflower.output

    // source code remapping
    implementation libs.fabric.mercury

    // Kotlin
    implementation(libs.kotlin.metadata) {
        transitive = false
    }

    // Kapt integration
    compileOnly libs.kotlin.gradle.plugin

    // Testing
    testImplementation(gradleTestKit())
    testImplementation(testLibs.spock) {
        exclude module: 'groovy-all'
    }
    testImplementation testLibs.junit.jupiter.engine
    testRuntimeOnly testLibs.junit.platform.launcher
    testImplementation(testLibs.javalin) {
        exclude group: 'org.jetbrains.kotlin'
    }
    testImplementation testLibs.mockito
    testImplementation testLibs.java.debug

    compileOnly runtimeLibs.jetbrains.annotations
    testCompileOnly runtimeLibs.jetbrains.annotations

    testCompileOnly(testLibs.mixin) {
        transitive = false
    }
}

jar {
    manifest {
        attributes 'Implementation-Version': project.version
    }

    from sourceSets.commonDecompiler.output.classesDirs
    from sourceSets.cfr.output.classesDirs
    from sourceSets.fernflower.output.classesDirs
    from sourceSets.vineflower.output.classesDirs
}

base {
    archivesName = project.name
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()
    withJavadocJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

spotless {
    setLineEndings(com.diffplug.spotless.LineEnding.UNIX)

    java {
        targetExclude("**/loom/util/DownloadUtil.java")
        targetExclude("**/generated/**")
        removeUnusedImports()
        indentWithSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
        licenseHeaderFile(rootProject.file("HEADER")).yearSeparator("-")
        //palantirJavaFormat()
    }

    groovy {
        indentWithSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
        importOrder('java', 'javax', '', 'net.fabricmc', '', 'dev.aoqia', '\\#')
        licenseHeaderFile(rootProject.file("HEADER")).yearSeparator("-")
        greclipse()
    }

    groovyGradle {
        target('src/**/*.gradle', '*.gradle')
        // Exclude build.gradle because it keeps pestering me about it!
        targetExclude("**/build.gradle")
        indentWithSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
        greclipse()
    }

    kotlin {
        indentWithSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
        licenseHeaderFile(rootProject.file("HEADER")).yearSeparator("-")
        targetExclude("**/build.gradle.kts")
        targetExclude("src/test/resources/projects/*/**")
        ktlint()
    }
}

//codenarc {
//    toolVersion = libs.versions.codenarc.get()
//    configFile = file("codenarc.groovy")
//}

gradlePlugin {
    plugins {
        leafLoom {
            id = project.name
            displayName = project.name
            version = project.version
            group = project.group
            description = project.description
            longDescription = project.longDescription
            implementationClass = 'dev.aoqia.loom.LoomGradlePlugin'
        }
    }
}

test {
    maxHeapSize = "2560m"
    jvmArgs "-XX:+HeapDumpOnOutOfMemoryError"
    useJUnitPlatform()

    // Forward system prop onto tests.
    if (System.getProperty("leaf.loom.test.homeDir")) {
        systemProperty "leaf.loom.test.homeDir", System.getProperty("leaf.loom.test.homeDir")
    }


    if (ENV.CI) {
        retry {
            maxRetries = 3
        }
    }
}

// Workaround https://github.com/gradle/gradle/issues/25898
tasks.withType(Test).configureEach {
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
        '--add-opens=java.base/java.net=ALL-UNNAMED'
    ]
}

import org.gradle.util.GradleVersion
import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            pom {
                name = project.name
                description = project.description
                url = project.url
                inceptionYear = "2025"
                licenses {
                    license {
                        name = "MIT"
                        url = "https://spdx.org/licenses/MIT.html"
                    }
                }
                developers {
                    developer {
                        id = "aoqia194"
                        name = "aoqia"
                    }
                }
                scm {
                    connection = "scm:git:https://github.com/aoqia194/" + project.name + "/.git"
                    developerConnection = "scm:git:ssh://github.com/aoqia194/" + project.name + "/.git"
                    url = project.url
                }
            }
        }
    }

    repositories {
        maven {
            url = layout.buildDirectory.dir("staging-deploy")
        }
    }
}

// Because jreleaser 1.16.0 doesnt create the dir some reason
tasks.register('createJreleaserDir') {
    layout.buildDirectory.file('jreleaser').get().asFile.mkdirs()
}

tasks.named('jreleaserFullRelease').configure {
    dependsOn 'createJreleaserDir'
}

jreleaser {
    project {
        name = project.name
        version = project.version
        versionPattern = 'SEMVER'
        description = project.description
        longDescription = project.longDescription
        authors = ['aoqia194', 'FabricMC']
        maintainers = ['aoqia194']
        license = 'MIT'
        inceptionYear = '2025'
        links {
            homepage = rootProject.url
            license = 'https://spdx.org/licenses/MIT.html'
        }
    }
    checksum {
        name = 'checksums.txt'
        algorithm('MD5')
        algorithm('SHA-1')
        algorithm('SHA-256')
        algorithm('SHA-512')
        individual = true
        artifacts = true
        files = true
    }
    signing {
        active = 'ALWAYS'
        armored = true
        passphrase = ENV.GPG_PASSPHRASE_KEY
        publicKey = ENV.GPG_PUBLIC_KEY
        secretKey = ENV.GPG_PRIVATE_KEY
    }
    deploy {
        maven {
            pomchecker {
                version = "1.14.0"
                failOnWarning = false // annoying
                failOnError = true
                strict = true
            }
            mavenCentral {
                sonatype {
                    applyMavenCentralRules = true
                    active = "ALWAYS"
                    snapshotSupported = true
                    authorization = 'BEARER'
                    username = ENV.MAVEN_USERNAME
                    password = ENV.MAVEN_PASSWORD
                    url = "https://central.sonatype.com/api/v1/publisher"
                    stagingRepository("build/staging-deploy")
                    verifyUrl = "https://repo1.maven.org/maven2/{{path}}/{{filename}}"
                    namespace = rootProject.group
                }
            }
        }
    }
}

// A task to output a json file with a list of all the test to run
tasks.register('writeActionsTestMatrix') {
    doLast {
        def testMatrix = []
        file('src/test/groovy/dev/aoqia/loom/test/integration').eachFile {
            if (it.name.endsWith("Test.groovy")) {
                if (it.name.endsWith("ReproducibleBuildTest.groovy")) {
                    // This test gets a special case to run across all os's
                    return
                }

                if (it.name.endsWith("DebugLineNumbersTest.groovy")) {
                    // Known flakey test
                    return
                }

                def className = it.name.replace(".groovy", "")
                testMatrix.add("dev.aoqia.loom.test.integration.${className}")
            }
        }

        // Run all the unit tests together
        testMatrix.add("dev.aoqia.loom.test.unit.*")

        // Kotlin tests
        testMatrix.add("dev.aoqia.loom.test.kotlin.*")

        def json = groovy.json.JsonOutput.toJson(testMatrix)
        def output = file("build/test_matrix.json")
        output.parentFile.mkdir()
        output.text = json
    }
}

tasks.named('wrapper') {
    distributionType = Wrapper.DistributionType.ALL
}

/**
 * Run this task to download the gradle sources next to the api jar, you may need to manually attach the sources jar
 */
tasks.register('downloadGradleSources') {
    doLast {
        // Awful hack to find the gradle api location
        def gradleApiFile = project.configurations.detachedConfiguration(dependencies.gradleApi()).files.stream()
            .find {
                it.name.startsWith("gradle-api")
            }

        def gradleApiSources = new File(gradleApiFile.absolutePath.replace(".jar", "-sources.jar"))
        def url = "https://services.gradle.org/distributions/gradle-${GradleVersion.current().getVersion()}-src.zip"

        gradleApiSources.delete()

        println("Downloading (${url}) to (${gradleApiSources})")
        gradleApiSources << new URL(url).newInputStream()
    }
}

tasks.register('printActionsTestName', PrintActionsTestName) {
}

/**
 * Replaces invalid characters in test names for GitHub Actions artifacts.
 */
abstract class PrintActionsTestName extends DefaultTask {
    @Input
    @Option(option = "name", description = "The test name")
    String testName

    @TaskAction
    def run() {
        def sanitised = testName.replace('*', '_')
        new File(System.getenv().GITHUB_OUTPUT) << "\ntest=$sanitised"
    }
}

apply from: rootProject.file('gradle/versions.gradle')
